# django-rusty-templates

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pr-comment-django-test-suite.yml  python.yml  ruff.yml  rust.yml
python/django_rusty_templates/: __init__.py
scripts/: django_tests_use_rusty_templates.patch  run_django_test_suite.py
src/: error.rs  filters.rs  lex.rs  lib.rs  loaders.rs  parse.rs  render.rs  template.rs  types.rs  utils.rs
src/lex/: autoescape.rs  common.rs  core.rs  custom_tag.rs  forloop.rs  ifcondition.rs  load.rs  tag.rs  url.rs  variable.rs
src/render/: common.rs  filters.rs  tags.rs  types.rs
tests/: apps.py  conftest.py  settings.py  test_autoescape.py  test_django.py  test_engine.py  test_translation.py  test_variable.py  urls.py  utils.py  views.py
tests/filters/: test_add.py  test_addslashes.py  test_capfirst.py  test_center.py  test_escape.py  test_external.py  test_lower.py  test_safe.py  test_slugify.py  test_upper.py  test_wordwrap.py  test_yesno.py
tests/locale/de/LC_MESSAGES/: django.po
tests/tags/: test_autoescape.py  test_custom.py  test_custom_simple.py  test_custom_simple_block.py  test_for.py  test_if.py  test_load.py  test_url.py
tests/templates/: full_example.html  invalid.txt  parse_error.txt  translation.txt
tests/templatetags/: custom_filters.py  custom_tags.py  invalid_tags.py  more_filters.py  no_filters.py  no_tags.py
