[package]
name = "django-rusty-templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_rusty_templates"
crate-type = ["cdylib"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
num-bigint = "0.4.6"
pyo3 = { version = "0.22.0", features = ["num-bigint"] }
thiserror = "1.0.64"
unicode-xid = "0.2.6"
