[package]
name = "django-rusty-templates"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_rusty_templates"
crate-type = ["cdylib"]

[dependencies]
either = "1.14.0"
encoding_rs = "0.8.35"
html-escape = "0.2.13"
miette = { version = "7.2.0", features = ["fancy"] }
num-bigint = "0.4.6"
pyo3 = { version = "0.23.3", features = ["num-bigint"] }
sugar_path = "1.2.0"
thiserror = "2.0.9"
unicode-xid = "0.2.6"

[dev-dependencies]

quickcheck = "1.0.3"
temp-env = "0.3.6"
cargo-llvm-cov = "0.6.16"
